--- a/src/Embajada/ValijaBundle/Resources/views/Valija/new.html.twig
+++ b/src/Embajada/ValijaBundle/Resources/views/Valija/new.html.twig
@@ -13,9 +13,11 @@
 		   
 
 
-	                {{ form_errors  (form.numerodevalija) }}
-	    			{{ form_label  (form.numerodevalija) }}
-	    			{{ form_widget (form.numerodevalija)}}
+	                {#{ form_errors  (form.numerodevalija) }#}
+	    			{#{ form_label  (form.numerodevalija) }#}
+	    			{#{ form_widget (form.numerodevalija)}#}
+
+
 	    			{# Atributos
 	    			, { 'attr': {
 	                    'class':"input-block-level",}}
