--- a/src/Embajada/ValijaBundle/Resources/views/Valija/show.html.twig
+++ b/src/Embajada/ValijaBundle/Resources/views/Valija/show.html.twig
@@ -26,6 +26,10 @@
             <th>Peso</th>
             <td>{{ entity.peso }}</td>
         </tr>
+        <tr>
+            <th>Peso</th>
+            <td>{{ entity.pdf }}</td>
+        </tr>        
     </tbody>
 </table>
 
