--- a/src/Embajada/OrhBundle/Resources/views/Compensatorios/pdf.html.twig
+++ b/src/Embajada/OrhBundle/Resources/views/Compensatorios/pdf.html.twig
@@ -86,6 +86,42 @@
             <td>{% if entity.horadefin1 %}{{ entity.horadefin1|date('H:m') }}{% endif %}</td>
             <td>Embajador</td>
         </tr>
+        {% if entity.diasdecompensatorio >=2 %}
+        <tr>
+            <td>{% if entity.fechadeevento2 %}{{ entity.fechadeevento2|date('Y-m-d') }}{% endif %}</td>
+            <td>{{entity.actividad2}}</td>
+            <td>{% if entity.horadeinicio2 %}{{ entity.horadeinicio2|date('H:m') }}{% endif %}</td>
+            <td>{% if entity.horadefin2 %}{{ entity.horadefin2|date('H:m') }}{% endif %}</td>
+            <td>Embajador</td>
+        </tr>
+        {% endif %}
+        {% if entity.diasdecompensatorio >=3 %}
+        <tr>
+            <td>{% if entity.fechadeevento3 %}{{ entity.fechadeevento3|date('Y-m-d') }}{% endif %}</td>
+            <td>{{entity.actividad3}}</td>
+            <td>{% if entity.horadeinicio3 %}{{ entity.horadeinicio3|date('H:m') }}{% endif %}</td>
+            <td>{% if entity.horadefin3 %}{{ entity.horadefin3|date('H:m') }}{% endif %}</td>
+            <td>Embajador</td>
+        </tr>
+        {% endif %}
+        {% if entity.diasdecompensatorio >=4 %}
+        <tr>
+            <td>{% if entity.fechadeevento4 %}{{ entity.fechadeevento4|date('Y-m-d') }}{% endif %}</td>
+            <td>{{entity.actividad4}}</td>
+            <td>{% if entity.horadeinicio4 %}{{ entity.horadeinicio4|date('H:m') }}{% endif %}</td>
+            <td>{% if entity.horadefin4 %}{{ entity.horadefin4|date('H:m') }}{% endif %}</td>
+            <td>Embajador</td>
+        </tr>
+        {% endif %}
+        <p></p>
+    <table>
+        <tr>
+            <td width="150"></td>
+            <td align="center">Firma del Solicitante</td>
+            <td width="200"></td>
+        </tr>
     </table>
+    </table>
+
 </body>
 </html>
